[package]
authors = ["Guillaume Vareille <vareille@users.sourceforge.net>", "Josh Matthews <josh@joshmatthews.net>", "Aaron Trent <novacrazy@gmail.com>"]
build = "build.rs"
categories = ["api-bindings", "gui"]
description = "High-level Rust binding for the tinyfiledialogs C library."
keywords = ["dialog", "ui", "windows", "unix"]
license = "zlib-acknowledgement"
name = "tinyfiledialogs"
readme = "README.md"
repository = "https://github.com/jdm/tinyfiledialogs-rs"
version = "3.0.0"

[build-dependencies]
gcc = "0.3"

[dependencies]
libc = "0.2"

[lib]
name = "tinyfiledialogs"
